--- a/charts/models/templates/backendsecuritypolicy.yaml
+++ b/charts/models/templates/backendsecuritypolicy.yaml
@@ -3,14 +3,28 @@
 apiVersion: aigateway.envoyproxy.io/v1alpha1
 kind: BackendSecurityPolicy
 metadata:
-  name: {{ $backendName }}-apikey
+  name: {{ $backendName }}-security
 spec:
   targetRefs:
     - group: aigateway.envoyproxy.io
       kind: AIServiceBackend
       name: {{ $backendConfig.resourceName }}
+  {{- if eq $backendConfig.type "GCPCredentials" }}
+  type: GCPCredentials
+  gcpCredentials:
+    projectName: {{ $backendConfig.gcpCredentials.projectName }}
+    region: {{ $backendConfig.gcpCredentials.region }}
+    credentialsFile:
+      secretRef:
+        name: {{ $backendConfig.gcpCredentials.credentialsFile.secretRef.name }}
+        {{- if $backendConfig.gcpCredentials.credentialsFile.secretRef.key }}
+        key: {{ $backendConfig.gcpCredentials.credentialsFile.secretRef.key }}
+        {{- end }}
+  {{- else }}
   type: APIKey
   apiKey:
     secretRef:
       name: {{ $backendConfig.apiKeySecretRef.name }}
+      key: {{ $backendConfig.apiKeySecretRef.key }}
+  {{- end }}
 {{- end }}
