--- a/charts/models/values.yaml
+++ b/charts/models/values.yaml
@@ -30,9 +30,9 @@ backends:
       hostname: api.fireworks.ai
       port: 443
     securityType: APIKey
-    apiKeySecretRef:
-      name: fw-primary-apikey
-      key: apiKey
+    useEnvVars: true
+    envSecretRef:
+      name: litellm-fireworks-key
     tlsHostname: api.fireworks.ai
   fw-02:
     resourceName: fw-backend-02-svc
@@ -42,9 +42,9 @@ backends:
       hostname: api.fireworks.ai
       port: 443
     securityType: APIKey
-    apiKeySecretRef:
-      name: fw-primary-apikey
-      key: apiKey
+    useEnvVars: true
+    envSecretRef:
+      name: litellm-fireworks-key
     tlsHostname: api.fireworks.ai
   gpt-01:
     resourceName: gpt-01-svc
@@ -53,9 +53,9 @@ backends:
       hostname: api.ai.kivoyo.com
       port: 443
     securityType: APIKey
-    apiKeySecretRef:
-      name: gpt-primary-apikey
-      key: apiKey
+    useEnvVars: true
+    envSecretRef:
+      name: litellm-openai-api-key
     tlsHostname: api.ai.kivoyo.com
   gpt-02:
     resourceName: gpt-02-svc
@@ -64,9 +64,9 @@ backends:
       hostname: api.ai.kivoyo.com
       port: 443
     securityType: APIKey
-    apiKeySecretRef:
-      name: gpt-primary-apikey
-      key: apiKey
+    useEnvVars: true
+    envSecretRef:
+      name: litellm-openai-api-key
     tlsHostname: api.ai.kivoyo.com
   gcp-01:
     resourceName: gcp-01-svc
