update(): clearn up workspace and add proper readme  file

--- a/charts/cnpg-pgdump-backup/test-manifest/configmap.yaml
+++ b/charts/cnpg-pgdump-backup/test-manifest/configmap.yaml
@@ -1,19 +1,20 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: postgres-initdb
-  namespace: pgdump-test
-data:
-  init.sql: |
-    CREATE TABLE test_table (
-      id SERIAL PRIMARY KEY,
-      name VARCHAR(50) NOT NULL,
-      created_at TIMESTAMPTZ DEFAULT NOW()
-    );
-    
-    -- Insert 10,000 rows with unique, realistic names and timestamps
-    INSERT INTO test_table (name, created_at)
-    SELECT
-      'User_' || i,
-      NOW() - (RANDOM() * INTERVAL '365 days')
-    FROM generate_series(1, 10000) AS i;   
+# Commented out for restore testing - uncomment to populate test data
+# apiVersion: v1
+# kind: ConfigMap
+# metadata:
+#   name: postgres-initdb
+#   namespace: pgdump-test
+# data:
+#   init.sql: |
+#     CREATE TABLE test_table (
+#       id SERIAL PRIMARY KEY,
+#       name VARCHAR(50) NOT NULL,
+#       created_at TIMESTAMPTZ DEFAULT NOW()
+#     );
+#
+#     -- Insert 10,000 rows with unique, realistic names and timestamps
+#     INSERT INTO test_table (name, created_at)
+#     SELECT
+#       'User_' || i,
+#       NOW() - (RANDOM() * INTERVAL '365 days')
+#     FROM generate_series(1, 10000) AS i;
