--- a/charts/cnpg-pgdump-backup/test-manifest/deployment.yaml
+++ b/charts/cnpg-pgdump-backup/test-manifest/deployment.yaml
@@ -24,12 +24,12 @@ spec:
           volumeMounts:
             - name: postgres-data
               mountPath: /var/lib/postgresql/data
-            - name: initdb
-              mountPath: /docker-entrypoint-initdb.d/init.sql
-              subPath: init.sql
+            # - name: initdb
+            #   mountPath: /docker-entrypoint-initdb.d/init.sql
+            #   subPath: init.sql
       volumes:
         - name: postgres-data
           emptyDir: {}
-        - name: initdb
-          configMap:
-            name: postgres-initdb   
+        # - name: initdb
+        #   configMap:
+        #     name: postgres-initdb
