--- a/charts/cnpg-pgdump-backup/how-it-works/deployment.yaml
+++ b/charts/cnpg-pgdump-backup/how-it-works/deployment.yaml
@@ -20,7 +20,7 @@ spec:
             - containerPort: 5432
           envFrom:
             - secretRef:
-                name: postgres-secret
+                name: litellm-pg-app
           volumeMounts:
             - name: postgres-data
               mountPath: /var/lib/postgresql/data
