update(): secret.yaml

--- a/charts/cnpg-pgdump-backup/how-it-works/secret.yaml
+++ b/charts/cnpg-pgdump-backup/how-it-works/secret.yaml
@@ -9,4 +9,4 @@ stringData:
   host: postgres.pgdump-test.svc.cluster.local
   password: testpassword
   port: "5432"
-  user: testuser
+  username: testuser
