--- a/charts/cnpg-pgdump-backup/Chart.yaml
+++ b/charts/cnpg-pgdump-backup/Chart.yaml
@@ -2,15 +2,11 @@ apiVersion: v2
 name: cnpg-pgdump-backup
 description: |
   Automated PostgreSQL backup and restore solution for CloudNativePG clusters.
-  Supports scheduled backups using pg_dump with S3 storage and manual disaster recovery.
+  Supports scheduled backups using pg_dump with S3 storage and manual
+  disaster recovery.
 type: application
 version: 0.1.0
 appVersion: "0.1.0"
-
-dependencies:
-  - name: common
-    repository: https://bjw-s-labs.github.io/helm-charts
-    version: 4.6.2
 
 keywords:
   - postgresql
@@ -22,19 +18,13 @@ keywords:
   - pg_dump
   - disaster-recovery
   - database
-
-home: https://github.com/adorsys-gis/ai-ops/charts/cnpg-pgdump-backup
+home: https://github.com/adorsys-gis/ai-helm/charts/cnpg-pgdump-backup
 
 maintainers:
   - name: Adorsys GIS Team
-    email: gis-team@adorsys.de
+    email: mfrancksorel@gmail.com
 
-annotations:
-  artifacthub.io/category: database
-  artifacthub.io/license: Apache-2.0
-  artifacthub.io/operator: "false"
-  artifacthub.io/prerelease: "false"
-  artifacthub.io/signKey: |
-    fingerprint: XXXX
-    url: https://xxx.gpg
-
+dependencies:
+  - name: common
+    version: 4.6.2
+    repository: https://bjw-s-labs.github.io/helm-charts   
