--- a/charts/cnpg-pgdump-backup/values.yaml
+++ b/charts/cnpg-pgdump-backup/values.yaml
@@ -26,7 +26,7 @@ s3:
   # -- S3 prefix/path within bucket
   prefix: ""
   # -- REQUIRED: Secret name containing S3 credentials (created by Terraform with S3_* keys)
-  secretName: "open-web-ui-s3"
+  secretName: "open_web_ui_s3"
 
 ## @section RBAC Configuration
 rbac:
