Fix Helm chart: proper Chart.yaml, remove .helmignore, update dependencies

--- a/charts/cnpg-pgdump-backup/Chart.yaml
+++ b/charts/cnpg-pgdump-backup/Chart.yaml
@@ -1,29 +1,12 @@
 apiVersion: v2
 name: cnpg-pgdump-backup
-description: |
-  Automated PostgreSQL backup and restore solution for CloudNativePG clusters.
-  Supports scheduled backups using pg_dump with S3 storage and manual
-  disaster recovery.
+description: Automated PostgreSQL backup and restore solution for CloudNativePG clusters
 type: application
 version: 0.1.0
 appVersion: "0.1.0"
 
-keywords:
-  - postgresql
-  - postgres
-  - cnpg
-  - cloudnativepg
-  - backup
-  - restore
-  - pg_dump
-  - disaster-recovery
-home: https://github.com/adorsys-gis/ai-helm/charts/cnpg-pgdump-backup
-
-maintainers:
-  - name: Adorsys GIS Team
-    email: mfrancksorel@gmail.com
-
 dependencies:
   - name: common
     version: 4.6.2
-    repository: https://bjw-s-labs.github.io/helm-charts   
+    repository: https://bjw-s-labs.github.io/helm-charts
+
