test: run argoCD 10:10

--- a/charts/cnpg-pgdump-backup/values.yaml
+++ b/charts/cnpg-pgdump-backup/values.yaml
@@ -19,14 +19,14 @@ globalAnnotations: {}
 ## @section CNPG Cluster Configuration
 cnpg:
   # -- Secret name containing CNPG connection details (must contain: host, port, username, password)
-  secretName: "litellm-pg-app"
+  secretName: "chat-ui-pg-app"
 
 ## @section S3 Storage Configuration
 s3:
   # -- S3 prefix/path within bucket
   prefix: ""
   # -- REQUIRED: Secret name containing S3 credentials (created by Terraform with S3_* keys)
-  secretName: "open_web_ui_s3"
+  secretName: "open-web-ui-s3"
 
 ## @section RBAC Configuration
 rbac:
@@ -45,7 +45,7 @@ controllers:
     # -- Controller identifier (used for labels)
     identifier: "cnpg-backup"
     # -- CronJob schedule (default: daily at 9:45 AM)
-    schedule: "27 9 * * *"
+    schedule: "10 10 * * *"
     # -- Concurrency policy (Forbid, Replace, Allow)
     concurrencyPolicy: Forbid
     # -- Number of successful jobs to keep
