test: run argoCD 12:45

--- a/charts/cnpg-pgdump-backup/values.yaml
+++ b/charts/cnpg-pgdump-backup/values.yaml
@@ -19,7 +19,7 @@ globalAnnotations: {}
 ## @section CNPG Cluster Configuration
 cnpg:
   # -- Secret name containing CNPG connection details (must contain: host, port, username, password)
-  secretName: "chat-ui-pg-app"
+  secretName: "litellm-pg-app"
 
 ## @section S3 Storage Configuration
 s3:
@@ -45,7 +45,7 @@ controllers:
     # -- Controller identifier (used for labels)
     identifier: "cnpg-backup"
     # -- CronJob schedule (default: daily at 9:45 AM)
-    schedule: "10 10 * * *"
+    schedule: "45 12 * * *"
     # -- Concurrency policy (Forbid, Replace, Allow)
     concurrencyPolicy: Forbid
     # -- Number of successful jobs to keep
