test: run argoCD 13:35

--- a/charts/cnpg-pgdump-backup/templates/job-restore.yaml
+++ b/charts/cnpg-pgdump-backup/templates/job-restore.yaml
@@ -68,11 +68,11 @@ spec:
                 secretKeyRef:
                   name: {{ $root.Values.s3.secretName }}
                   key: S3_SECRET_ACCESS_KEY
-            - name: AWS_SESSION_TOKEN
-              valueFrom:
-                secretKeyRef:
-                  name: {{ $root.Values.s3.secretName }}
-                  key: AWS_SESSION_TOKEN
+            # - name: AWS_SESSION_TOKEN
+            #   valueFrom:
+            #     secretKeyRef:
+            #       name: {{ $root.Values.s3.secretName }}
+            #       key: AWS_SESSION_TOKEN
             - name: S3_REGION
               valueFrom:
                 secretKeyRef:
