--- a/charts/models/values.yaml
+++ b/charts/models/values.yaml
@@ -21,6 +21,25 @@ rateLimitPolicy:
           - limit: 100
             window: 1m
 
+tokenRateLimitPolicy:
+  enabled: true
+  name: global-token-ratelimit
+
+  target: 
+    kind: Gateway
+    name: ai-gateway
+
+  limits:
+    global:
+      tokens: 50
+      window: 1m
+      requests: 2
+      window: 1m
+
+  counter:
+    expression: request.ip
+
+
 backendTrafficPolicy:
   enabled: true
   name: backend-retry-policy
@@ -136,8 +155,9 @@ models:
       limits:
         default:
           rates:
-            - limit: 3
-              window: 1m
+          - type: requests
+            limit: 2
+            window: 1m
 
     backends:
       aws-01:
@@ -179,7 +199,7 @@ models:
 
   gpt-5:
     enabled: true
-
+    
     rateLimit:
       scope:
         - user
@@ -202,7 +222,7 @@ models:
         ref: gpt-02
         modelNameOverride: "gpt-5"
         priority: 1
-  
+
   gpt-04:
     enabled: true
 
@@ -216,7 +236,7 @@ models:
           rates:
             - limit: 5
               window: 1m
-        
+
     backends:
       aws-01:
         enabled: true
@@ -280,5 +300,4 @@ models:
         ref: gcp-02
         modelNameOverride: "gemini-2.5-pro"
         priority: 1
-
 
