--- a/charts/models/templates/aigatewayroute.yaml
+++ b/charts/models/templates/aigatewayroute.yaml
@@ -22,6 +22,13 @@ spec:
     - group: gateway.networking.k8s.io
       kind: Gateway
       name: {{ $.Values.gatewayRef.name }}
+  llmRequestCosts:
+    - metadataKey: prompt_tokens
+      type: InputToken
+    - metadataKey: completion_tokens
+      type: OutputToken
+    - metadataKey: llm_total_token
+      type: TotalToken
   rules:
     - matches:
         - headers:
