fix: gpt-4 model and security policy

--- a/charts/models/values.yaml
+++ b/charts/models/values.yaml
@@ -177,12 +177,12 @@ models:
       gpt-01:
         enabled: true
         ref: gpt-01
-        modelNameOverride: "gpt-4o-mini"
+        modelNameOverride: "gpt-4.1"
         priority: 0
       gpt-02:
         enabled: true
         ref: gpt-02
-        modelNameOverride: "gpt-4o-mini"
+        modelNameOverride: "gpt-4.1"
         priority: 1
 
   gemini-flash:
