feat: update Gateway API version to gateway.networking.k8s.io/v1

--- a/charts/models/templates/backendtlspolicy.yaml
+++ b/charts/models/templates/backendtlspolicy.yaml
@@ -1,6 +1,6 @@
 {{- range $backendName, $backendConfig := .Values.backends }}
 ---
-apiVersion: gateway.networking.k8s.io/v1alpha3
+apiVersion: gateway.networking.k8s.io/v1
 kind: BackendTLSPolicy
 metadata:
   name: {{ $backendConfig.resourceName }}-tls
