feat: changed gcp backend name to vertex-ai

--- a/charts/models/values.yaml
+++ b/charts/models/values.yaml
@@ -82,9 +82,9 @@ backends:
     envSecretRef:
       name: openai-api-key-02
     tlsHostname: api.openai.com
-  gcp-01:
+  vertex-ai-01:
     enabled: true
-    resourceName: gcp-backend-01-svc
+    resourceName: vertex-ai-backend-01-svc
     schema: GCPVertexAI
     fqdn:
       hostname: us-central1-aiplatform.googleapis.com
@@ -97,9 +97,9 @@ backends:
         secretRef:
           name: gcp-service-account-key-01
     tlsHostname: us-central1-aiplatform.googleapis.com
-  gcp-02:
+  vertex-ai-02:
     enabled: true
-    resourceName: gcp-backend-02-svc
+    resourceName: vertex-ai-backend-02-svc
     schema: GCPVertexAI
     fqdn:
       hostname: us-central1-aiplatform.googleapis.com
@@ -720,14 +720,14 @@ models:
       requests: 50000
       unit: Minute
     backends:
-      gcp-01:
+      vertex-ai-01:
         enabled: true
-        ref: gcp-01
+        ref: vertex-ai-01
         modelNameOverride: "gemini-2.5-flash"
         priority: 0
-      gcp-02:
+      vertex-ai-02:
         enabled: true
-        ref: gcp-02
+        ref: vertex-ai-02
         modelNameOverride: "gemini-2.5-flash"
         priority: 1
 
@@ -737,14 +737,14 @@ models:
       requests: 50000
       unit: Minute
     backends:
-      gcp-01:
+      vertex-ai-01:
         enabled: true
-        ref: gcp-01
+        ref: vertex-ai-01
         modelNameOverride: "gemini-2.5-pro"
         priority: 0
-      gcp-02:
+      vertex-ai-02:
         enabled: true
-        ref: gcp-02
+        ref: vertex-ai-02
         modelNameOverride: "gemini-2.5-pro"
         priority: 1
 
@@ -754,14 +754,14 @@ models:
       requests: 50000
       unit: Minute
     backends:
-      gcp-01:
+      vertex-ai-01:
         enabled: true
-        ref: gcp-01
+        ref: vertex-ai-01
         modelNameOverride: "gemini-2.5-pro"
         priority: 0
-      gcp-02:
+      vertex-ai-02:
         enabled: true
-        ref: gcp-02
+        ref: vertex-ai-02
         modelNameOverride: "gemini-2.5-pro"
         priority: 1
 
@@ -771,14 +771,14 @@ models:
       requests: 50000
       unit: Minute
     backends:
-      gcp-01:
+      vertex-ai-01:
         enabled: true
-        ref: gcp-01
+        ref: vertex-ai-01
         modelNameOverride: "gemini-2.5-pro"
         priority: 0
-      gcp-02:
+      vertex-ai-02:
         enabled: true
-        ref: gcp-02
+        ref: vertex-ai-02
         modelNameOverride: "gemini-2.5-pro"
         priority: 1
 
@@ -788,14 +788,14 @@ models:
       requests: 50000
       unit: Minute
     backends:
-      gcp-01:
+      vertex-ai-01:
         enabled: true
-        ref: gcp-01
+        ref: vertex-ai-01
         modelNameOverride: "gemini-2.5-flash-lite"
         priority: 0
-      gcp-02:
+      vertex-ai-02:
         enabled: true
-        ref: gcp-02
+        ref: vertex-ai-02
         modelNameOverride: "gemini-2.5-flash-lite"
         priority: 1
 
