--- a/charts/models/values.yaml
+++ b/charts/models/values.yaml
@@ -41,8 +41,7 @@ backends:
       hostname: api.fireworks.ai
       port: 443
     securityType: APIKey
-    useEnvVars: true
-    envSecretRef:
+    secretRef:
       name: fireworks-api-key-01
     tlsHostname: api.fireworks.ai
   fw-02:
@@ -54,8 +53,7 @@ backends:
       hostname: api.fireworks.ai
       port: 443
     securityType: APIKey
-    useEnvVars: true
-    envSecretRef:
+    secretRef:
       name: fireworks-api-key-02
     tlsHostname: api.fireworks.ai
   openai-01:
@@ -66,8 +64,7 @@ backends:
       hostname: api.openai.com
       port: 443
     securityType: APIKey
-    useEnvVars: true
-    envSecretRef:
+    secretRef:
       name: openai-api-key-01
     tlsHostname: api.openai.com
   openai-02:
@@ -78,8 +75,7 @@ backends:
       hostname: api.openai.com
       port: 443
     securityType: APIKey
-    useEnvVars: true
-    envSecretRef:
+    secretRef:
       name: openai-api-key-02
     tlsHostname: api.openai.com
   vertex-ai-01:
@@ -121,8 +117,7 @@ backends:
       hostname: generativelanguage.googleapis.com
       port: 443
     securityType: APIKey
-    useEnvVars: true
-    envSecretRef:
+    secretRef:
       name: google-ai-studio-api-key-01
     tlsHostname: generativelanguage.googleapis.com
   google-ai-studio-02:
@@ -134,8 +129,7 @@ backends:
       hostname: generativelanguage.googleapis.com
       port: 443
     securityType: APIKey
-    useEnvVars: true
-    envSecretRef:
+    secretRef:
       name: google-ai-studio-api-key-02
     tlsHostname: generativelanguage.googleapis.com
   anthropic-01:
@@ -147,8 +141,7 @@ backends:
       hostname: api.anthropic.com
       port: 443
     securityType: APIKey
-    useEnvVars: true
-    envSecretRef:
+    secretRef:
       name: anthropic-api-key-01
     tlsHostname: api.anthropic.com
   anthropic-02:
@@ -160,8 +153,7 @@ backends:
       hostname: api.anthropic.com
       port: 443
     securityType: APIKey
-    useEnvVars: true
-    envSecretRef:
+    secretRef:
       name: anthropic-api-key-02
     tlsHostname: api.anthropic.com
 
